spacing issues

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -36,10 +36,10 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 960px;
-  margin: 0 auto;
+  margin: auto auto;
   padding: 1rem 2rem;
-  justify-content: center;
-  overflow: hidden;
+  justify-content: right;
+  overflow: auto;
 }
 
 /* HEADER */
